<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ptCounterPeople"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/counterPeople"
        android:inputType="number"
        android:textColor="#32FA3A"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tvCounterPeople"
        app:layout_constraintStart_toStartOf="@+id/tvCounterPeople"
        app:layout_constraintTop_toBottomOf="@+id/tvCounterPeople" />

    <TextView
        android:id="@+id/tvCounterPeople"
        android:layout_width="368dp"
        android:layout_height="33dp"
        android:text="@string/entry"
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/bGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onClickGo"
        android:text="@string/go"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nick4"
        app:layout_constraintStart_toStartOf="@+id/nick4"
        app:layout_constraintTop_toBottomOf="@+id/nick4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/setNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getNameTable"
        android:textColor="#040303"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <EditText
        android:id="@+id/nick1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/getName"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/setNick"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="@+id/setNick"
        app:layout_constraintTop_toBottomOf="@+id/setNick" />

    <EditText
        android:id="@+id/nick2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/getName"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/nick1"
        app:layout_constraintStart_toStartOf="@+id/nick1"
        app:layout_constraintTop_toBottomOf="@+id/nick1" />

    <EditText
        android:id="@+id/nick3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/getName"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/nick2"
        app:layout_constraintStart_toStartOf="@+id/nick2"
        app:layout_constraintTop_toBottomOf="@+id/nick2" />

    <EditText
        android:id="@+id/nick4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/getName"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/nick3"
        app:layout_constraintStart_toStartOf="@+id/nick3"
        app:layout_constraintTop_toBottomOf="@+id/nick3" />

    <TextView
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="1."
        android:textColor="#020202"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/nick1"
        app:layout_constraintEnd_toStartOf="@+id/nick1"
        app:layout_constraintTop_toTopOf="@+id/nick1" />

    <TextView
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="2."
        android:textColor="#090808"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/nick2"
        app:layout_constraintEnd_toStartOf="@+id/nick2"
        app:layout_constraintTop_toTopOf="@+id/nick2" />

    <TextView
        android:id="@+id/num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="3."
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/nick3"
        app:layout_constraintEnd_toStartOf="@+id/nick3"
        app:layout_constraintTop_toTopOf="@+id/nick3" />

    <TextView
        android:id="@+id/num4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="4."
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/nick4"
        app:layout_constraintEnd_toStartOf="@+id/nick4"
        app:layout_constraintTop_toTopOf="@+id/nick4" />

    <Button
        android:id="@+id/bOkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="onClickOkey"
        android:text="@string/go"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ptCounterPeople"
        app:layout_constraintStart_toStartOf="@+id/ptCounterPeople"
        app:layout_constraintTop_toBottomOf="@+id/ptCounterPeople" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="269dp"
        android:layout_height="216dp"
        android:gravity="center|center_vertical"
        android:text="@string/error"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bSorry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sorry"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvError" />

</androidx.constraintlayout.widget.ConstraintLayout>