<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">

    <ImageView
        android:id="@+id/ivPerson1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        app:srcCompat="@drawable/person1" />

    <ImageView
        android:id="@+id/ivPerson2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        app:srcCompat="@drawable/person2" />

    <ImageView
        android:id="@+id/ivPerson3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        app:srcCompat="@drawable/person3" />

    <ImageView
        android:id="@+id/ivPerson4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        app:srcCompat="@drawable/person4" />

    <Button
        android:id="@+id/bLetsGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="339dp"
        android:onClick="onClickLetsGo"
        android:text="@string/poexali"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNick1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="name"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ivPerson1"
        app:layout_constraintStart_toStartOf="@+id/ivPerson1"
        app:layout_constraintTop_toBottomOf="@+id/ivPerson1" />

    <TextView
        android:id="@+id/tvNick2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="name"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ivPerson2"
        app:layout_constraintStart_toStartOf="@+id/ivPerson2"
        app:layout_constraintTop_toBottomOf="@+id/ivPerson2" />

    <TextView
        android:id="@+id/tvNick3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="name"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ivPerson3"
        app:layout_constraintStart_toStartOf="@+id/ivPerson3"
        app:layout_constraintTop_toBottomOf="@+id/ivPerson3" />

    <TextView
        android:id="@+id/tvNick4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="name"
        android:textColor="#020000"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ivPerson4"
        app:layout_constraintStart_toStartOf="@+id/ivPerson4"
        app:layout_constraintTop_toBottomOf="@+id/ivPerson4" />

    <TextView
        android:id="@+id/tvKarman1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karman"
        android:textColor="#F44336"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ivPerson1"
        app:layout_constraintStart_toStartOf="@+id/ivPerson1"
        app:layout_constraintTop_toBottomOf="@+id/tvNick1" />

    <TextView
        android:id="@+id/tvKarman2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karman"
        android:textColor="#F44336"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ivPerson2"
        app:layout_constraintStart_toStartOf="@+id/ivPerson2"
        app:layout_constraintTop_toBottomOf="@+id/tvNick2" />

    <TextView
        android:id="@+id/tvKarman3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karman"
        android:textColor="#F44336"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ivPerson3"
        app:layout_constraintStart_toStartOf="@+id/ivPerson3"
        app:layout_constraintTop_toBottomOf="@+id/tvNick3" />

    <TextView
        android:id="@+id/tvKarman4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karman"
        android:textColor="#F44336"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ivPerson4"
        app:layout_constraintStart_toStartOf="@+id/ivPerson4"
        app:layout_constraintTop_toBottomOf="@+id/tvNick4" />

    <Button
        android:id="@+id/bAddCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="165dp"
        android:onClick="onClickAddCheak"
        android:text="@string/plus_summa"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/tvSumma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="166dp"
        android:gravity="center"
        android:text="потрачено:"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>